# scout

./: .env.example  .gitignore  Dockerfile  README.md  SKILL.md  docker-compose.yml  mcp_server.py  mcp_stdio_server.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/agents/: __init__.py  answer_generator.py  base.py  orchestrator.py  planner.py  reasoning.py
app/agents/tools/: __init__.py  code_indexer.py  code_loader.py  search.py
app/api/: __init__.py
app/api/middleware/: __init__.py  error_handler.py
app/api/routes/: __init__.py  analysis.py  health.py
app/core/: __init__.py  config.py  dependencies.py
app/models/: __init__.py  requests.py  responses.py  schemas.py
app/services/: __init__.py  embedding_service.py  indexing_service.py  navigator.py  overview.py  repo_service.py  vector_store.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_overview.py  test_repo_service.py  test_services.py
