[project]
name = "github-code-retrieval"
version = "2.0.0"
description = "MCP server for GitHub code retrieval - semantic search for Claude Desktop & Claude Code CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "model-context-protocol", "github", "code-search", "semantic-search", "cursor", "claude", "claude-desktop", "claude-code", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP (Model Context Protocol) - Required for Claude Desktop & Claude Code
    "mcp>=1.0.0",
    # Local embeddings - no API keys required
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    # Vector store
    "chromadb>=0.4.22",
    # HTTP Server (optional network mode)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Core utilities
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
# Primary: MCP stdio server for Claude Desktop & Claude Code CLI
github-code-retrieval = "mcp_stdio_server:run"
# Alternative: HTTP server for network access
github-code-retrieval-http = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/github-code-retrieval"
Repository = "https://github.com/yourusername/github-code-retrieval"
Issues = "https://github.com/yourusername/github-code-retrieval/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools]
py-modules = ["mcp_server", "mcp_stdio_server"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"
